test/library/standard/Sort/errors/sortDomainArray.assoc5.good
sortDomainArray.chpl:53: error: isSorted() is not supported on domains
